force-app/main/default/objects/Delivery_Attempt__c/fields/Attempt_Date__c.field-meta.xml
<CustomField>
    <fullName>Attempt_Date__c</fullName>
    <label>Attempt Date</label>
    <type>DateTime</type>
</CustomField>