force-app/main/default/objects/Delivery_Attempt__c/fields/Attempt_Number__c.field-meta.xml
<CustomField>
    <fullName>Attempt_Number__c</fullName>
    <label>Attempt Number</label>
    <type>Number</type><precision>3</precision><scale>0</scale>
</CustomField>