force-app/main/default/objects/Delivery_Attempt__c/fields/Attempt_Status__c.field-meta.xml
        <CustomField>
            <fullName>Attempt_Status__c</fullName>
            <label>Attempt Status</label>
            <type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>Successful</fullName><default>false</default><label>Successful</label></value>
<value><fullName>Failed</fullName><default>false</default><label>Failed</label></value>
<value><fullName>Rescheduled</fullName><default>false</default><label>Rescheduled</label></value>
<value><fullName>Customer Unavailable</fullName><default>false</default><label>Customer Unavailable</label></value>
<value><fullName>Address Issue</fullName><default>false</default><label>Address Issue</label></value></valueSetDefinition></valueSet>
        </CustomField>