force-app/main/default/objects/Delivery_Attempt__c/fields/Delivery_Agent__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Agent__c</fullName>
    <label>Delivery Agent</label>
    <type>Lookup</type><referenceTo>User</referenceTo><relationshipLabel>Delivery Agent</relationshipLabel><relationshipName>Delivery_Agent</relationshipName>
</CustomField>