force-app/main/default/objects/Delivery_Attempt__c/fields/Next_Attempt_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Attempt_Date__c</fullName>
    <label>Next Attempt Date</label>
    <type>Date</type>
</CustomField>