force-app/main/default/objects/Delivery_Attempt__c/fields/Recipient_Availability__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Availability__c</fullName>
    <label>Recipient Availability</label>
    <type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>Available</fullName><default>true</default><label>Available</label></value><value><fullName>Unavailable</fullName><default>false</default><label>Unavailable</label></value><value><fullName>Unknown</fullName><default>false</default><label>Unknown</label></value></valueSetDefinition></valueSet>
</CustomField>